# uWebSockets

./: .gitignore  CMakeLists.txt  README.md  uwsConfig.cmake.in  uwsConfigVersion.cmake.in
cmake-files-for-other-projects-using-uws/cmake-module/: uws-download.cmake.in
cmake-module/: setupCMakeMacros.cmake
example/: CMakeLists.txt  main.cpp
uws/: CMakeLists.txt  config.h.in
uws/include/: Backend.h
uws/src/: Epoll.cpp
